package edu.fiuba.algoChess.modelo.salud;

public interface Curable {

	public Salud curar(double salud);

}
