package edu.fiuba.algoChess.modelo.salud;

public interface Herible {
	 Salud herir(double danioARecibir);
}
