package edu.fiuba.algoChess.modelo.salud;

public interface StateVive {
    public void stateComportarse();
    public boolean stateEstaVivo();
}
